[package]
name = "of-rs"
version = "0.0.1"
edition = "2021"
authors = ["Alberto Ruiz <aruiz@redhat.com>"]
repository = "https://gitlab.com/aruiz/of-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler_builtins = { version = "0.1", features = ["mem"] }

[profile.dev]
panic = "abort"
strip = true

[profile.release]
panic = "abort"
strip = true