[package]
name = "ieee1275-rs"
version = "0.0.1"
edition = "2021"
authors = ["Alberto Ruiz <aruiz@redhat.com>"]
repository = "https://gitlab.com/aruiz/ieee1275-rs"
license = "MIT"
categories = ["embedded", "no-std", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.powerpc-unknown-linux-gnu.dependencies]
compiler_builtins = { version = "0.1", features = ["mem"] }

[profile.dev]
panic = "abort"
strip = true

[profile.release]
panic = "abort"
strip = true

[features]
no_panic_handler = []