[package]
name = "ieee1275"
description = "Safe and easy-to-use wrapper for building OpenFirmware/IEEE1275 apps"
version = "0.1.1"
edition = "2021"
authors = ["Alberto Ruiz <aruiz@redhat.com>"]
repository = "https://github.com/rust-osdev/ieee1275-rs"
license = "MIT"
categories = ["embedded", "no-std", "api-bindings", "bootloader", "ieee1275"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.powerpc-unknown-linux-gnu.dependencies]
compiler_builtins = { version = "0.1", default-features = false, features = ["mem"] }

[profile.dev]
panic = "abort"
strip = true

[profile.release]
panic = "abort"
strip = true

[features]
no_panic_handler = []
no_global_allocator = []
