[package]
name = "of-rs-template"
version = "0.1.0"
edition = "2021"
repository = "https://gitlab.com/aruiz/of-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
of-rs = { path = "../" }

[profile.dev]
panic = "abort"
strip = true

[profile.release]
panic = "abort"
strip = true