[package]
name = "ieee1275-template"
version = "0.1.0"
edition = "2021"
repository = "https://gitlab.com/aruiz/of-rs"
license = "MIT"
authors = ["Alberto Ruiz <aruiz@redhat.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ieee1275 = { path = "../" }

[profile.dev]
panic = "abort"
strip = true

[profile.release]
panic = "abort"
strip = true