[package]
name = "ieee1275-test-runner"
version = "0.1.0"
edition = "2021"
repository = "https://gitlab.com/aruiz/of-rs"
license = "MIT"
authors = ["Alberto Ruiz <aruiz@redhat.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ieee1275 = { path = "../", features = ["no_panic_handler", "no_global_allocator"] }
